--- a/package.json
+++ b/package.json
@@ -17,23 +17,19 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.13.1",
     "react": "^16.4.1",
+    "react-bootstrap": "^1.3.0",
     "react-commentbox": "^3.0.1",
-    "react-dnd": "^11.1.3",
-    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.4.1",
     "react-dropzone": "^11.0.2",
     "react-edit-inplace": "^1.1.1",
     "react-file-drop": "^3.0.7",
-    "react-markdown": "^4.3.1",
     "react-markdown-editor-lite": "^1.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.4.1",
     "react-simple-card": "^2.0.2",
     "react-simplemde-editor": "^4.1.3",
     "react-tag-autocomplete": "^6.0.0-beta.6",
-    "react-tag-input": "^6.4.3",
     "react-toastify": "^4.1.0",
-    "reactjs-tag-input": "^2.0.15",
     "simple-react-comments": "^1.1.0",
     "sockjs-client": "^1.4.0",
     "stomp-websocket": "^2.3.4-next",
