--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "simple-react-comments": "^1.1.0",
     "sockjs-client": "^1.4.0",
     "stomp-websocket": "^2.3.4-next",
+    "styled-components": "^5.1.1",
     "superagent": "^5.3.1"
   },
   "scripts": {
